# nexuscore

./: .env.example  .gitignore  AGENT.md  Comprehensive_Analysis_Report.md  Makefile  Master_Execution_Plan.md  README.md  README_v1.md  app_start_log.txt  comprehensive_analysis_validation.md  docker-compose.yml  index.html  init_frontend_next-app.sh  main_page.html  master_execution_task_list.md  master_plan_validation_report.md
backend/: .env  Dockerfile  flush_database.sh  pyproject.toml  requirements.bak  requirements.txt  start_backend_server.sh
backend/apps/: __init__.py
backend/apps/billing/: admin.py  apps.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/core/: apps.py  constants.py  exceptions.py  validators.py
backend/apps/events/: __init__.py  apps.py  models.py
backend/apps/leads/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/organizations/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/privacy/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/subscriptions/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/users/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/webhooks/: __init__.py  admin.py  apps.py  models.py  (+3 more)
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/requirements/: base.txt  development.txt
(+78 files in other folders)
